UI and translation bug fixes
Translation changes
- User facing resource string changes at client app and strings.resx file.

UI bug fixes includes
- Fixed long message title truncate issue in comms tab.
- List header alignment issue in manage group tab for mobile screens.
- Vertical scroll overlapping in discover groups tab.
- Image height fixes in Teams group tab.

--- a/Source/DIConnect/ClientApp/src/components/EmployeeResourceGroup/teamChannelTab.scss
+++ b/Source/DIConnect/ClientApp/src/components/EmployeeResourceGroup/teamChannelTab.scss
@@ -26,8 +26,8 @@
 
 .img-grp-container {
     margin-top: 0.5rem;
-    width: 50rem;
-    height: 20rem
+    max-width: 50rem;
+    max-height: 30rem;
 }
 
 .group-text-container {
